hand-on/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  labels:
    app: webapp
spec:
  ports:
  - port: 80
  selector:
    app: webapp
